@@ -51,7 +51,7 @@ namespace http
         while (true)
         {
 
-            http::request *process = http::rproc::get_proc(exc);cout << process->request<<endl;
+            http::request *process = http::rproc::get_proc(exc);
             http::statdata::onhit();
 
             rd.get = NULL;
