@@ -3,7 +3,8 @@ For more info visit http://nativehttp.org
 
 WS_Dev:
 -maxClients function
--WebSockets (RFC6455)!
+-WebSockets (RFC6455)! - Full message reciving, sending(Text/Binary, streaming/normal sending), upload chunking
+	automatic ping response, closure process still have to be improved
 -Configuration sorted
 -Small bugfixes around disconecting clients
 
